# pyflowx

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.agents/skills/pyflowx-testing/: SKILL.md
.github/workflows/: ci.yml  release.yml
.trae/rules/: python-standards.md
examples/: async_aggregation.py  etl_pipeline.py  parallel_run.py
src/pyflowx/: __init__.py  __main__.py  command.py  compose.py  conditions.py  context.py  errors.py  executors.py  graph.py  profiling.py  report.py  runner.py  storage.py  task.py  utils.py
src/pyflowx/cli/: __init__.py  autofmt.py  bumpversion.py  clearscreen.py  emlmanager.py  envdev.py  envlinux.py  envpy.py  envqt.py  envrs.py  filedate.py  filelevel.py  folderback.py  folderzip.py  gittool.py  hfdownload.py  lscalc.py  packtool.py  pdftool.py  piptool.py  profiler.py  pymake.py  restarticoncache.py  runner.py  screenshot.py  sshcopyid.py  taskkill.py  which.py
src/pyflowx/cli/llm/: msdownload.py  sglang.py
src/pyflowx/cli/system/: clearscreen.py  taskkill.py  which.py
src/pyflowx/examples/: async_aggregation.py  etl_pipeline.py  parallel_run.py
src/pyflowx/tasks/: system.py
tests/: _proc_helper.py  conftest.py  test_advanced_features.py  test_chain_dsl.py  test_cli_runner.py  test_command_refs.py  test_conditions.py  test_context.py  test_errors.py  test_executor_process.py  test_executors.py  test_executors_edge_cases.py  test_graph.py  test_namespace.py  test_profiling.py  test_report.py  test_runner.py  test_storage.py  test_streaming.py  test_system.py  test_task.py  test_task_decorator.py  test_task_edge_cases.py  test_taskspec_commands.py  test_utils.py
tests/cli/: test_autofmt.py  test_bumpversion.py  test_clearscreen.py  test_emlmanager.py  test_envpy.py  test_envqt.py  test_envrs.py  test_filedate.py  test_filelevel.py  test_folderback.py  test_folderzip.py  test_gittool.py  test_lscalc.py  test_packtool.py  test_pdftool.py  test_piptool.py  test_profiler.py  test_pymake.py  test_screenshot.py  test_sshcopyid.py  test_taskkill.py  test_which.py
typings/graphlib/: __init__.pyi  graphlib.pyi
